--- a/configs/nerf.yaml
+++ b/configs/nerf.yaml
@@ -12,7 +12,6 @@ model:
   basis_dims: [4,4,4,2,2,2]
   basis_resos: [32,51,70,89,108,128]
   freq_bands:  [2. , 3.2, 4.4, 5.6, 6.8, 8.]
-#  freq_bands:  [1. , 2., 3., 4., 5., 6.]
 
 
   coef_init: 1.0
@@ -63,7 +62,7 @@ training:
   TV_weight_density: 0.000
   TV_weight_app: 0.00
 
-exporation:
+exportation:
   render_only: 0
   render_test: 1
   render_train: 0
