--- a/configs/tnt.yaml
+++ b/configs/tnt.yaml
@@ -76,7 +76,7 @@ training:
   TV_weight_density: 0.0
   TV_weight_app: 0.00
 
-exporation:
+exportation:
   render_only: 0
   render_test: 1
   render_train: 0
